# finmc-tech

./: .gitignore  FEATURE_LIST.md  LICENSE  Makefile  README.md  compare_nvda_amd.py  create_amd_features_extended.py  create_feature_importance_heatmap.py  feature_importance_rf.py  feature_importance_rf_light.py  fy13_to_standard_format_prompt.md  fy24_regenerate_prompt.md  lstm_forecast.py  plot_hpc_benchmark.py  plot_hpc_benchmark_comparison.py  plot_hpc_comparison_all.py  pyproject.toml  requirements.txt  rolling_corr_plot.py  rolling_feature_importance.py  run_pipeline.py  run_step8_hpc_benchmarks.sh  setup.py  show_results.py  train_models.py  文件整理索引.md  精读milestone论文+8步曲.docx
data/: nvdafy15.json  nvdafy16.json  nvdafy17.json  nvdafy19.json
data_cache/: .gitkeep
docs/: ALL_SCENARIOS_SHOCKS_SUMMARY.md  CONCURRENCY_VS_PARALLELISM.md  MPI_MC_DEMO_EXPLANATION.md  OPENMP_MC_DEMO_EXPLANATION.md  SCENARIO_SHOCKS.md  STEP4_MATHEMATICAL_FOUNDATION.md  STEP8_HPC_BENCHMARKS.md  YAHOO_FINANCE_API.md  interaction_features_diagram.md
examples/: NVDA_data_2010_2025.xlsx  demo_rolling_forecast.py  export_data.py  generate_evaluation_table.py  load_scaler_example.py  quick_start.py  read_word_doc.py  view_data.py
finmc_tech/: __init__.py  cli.py  config.py  step5_key_drivers.py
models/: champion_model.pkl  champion_model_v1.pkl  feature_scaler.pkl
notebooks/: README.md  demo_executed.ipynb  demo_nvda.ipynb  hpc_mc_demo.py  sanity_checks.md
outputs/: nvda_firm_fundamentals_master.json  nvda_fy2009_q1_q4.json  nvda_fy2010_q1_q4.json  nvda_fy2011_q1_q4.json  (+13 more)
(+89 files in other folders)
